--- a/style.css
+++ b/style.css
@@ -9,7 +9,19 @@ body{
     background-color: rgb(0, 255, 55);
     display: flex;
     flex-wrap: wrap;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Bokor", system-ui;
+    font-weight: 400;
+    font-style: normal;
+      
 }
+/*CSS que me dio google fonts*/
+.bokor-regular {
+    font-family: "Bokor", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 h1{
     color: white;
 }
@@ -22,10 +34,12 @@ h1{
     justify-content: center;
     align-items: center;
     margin: 8px;
-    .tarjeta:hover{
-        background-color: blueviolet;
-        transform: scale(1.05);
-    }
+    
+}
+.tarjeta:hover{
+    background-color: blueviolet;
+    transform: scale(1.05);
+    transform: rotate(4deg);
 }
 .tarjeta image{
     width: 200px;
