--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 /*comentario largo*/
 
@@ -28,13 +29,14 @@ h1{
 .tarjeta{
     background-color: rgb(0, 157, 255);
     width: 320px;
+    height: 600px;
     border-radius: 3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 8px;
-    
+    margin-top: 10px;
+    margin: 10px 15px 10px 15px;
 }
 .tarjeta:hover{
     background-color: blueviolet;
